Fix problem with tooltip not showing up as expected

--- a/web/src/main/resources/files/css/external/atooltip.css
+++ b/web/src/main/resources/files/css/external/atooltip.css
@@ -18,7 +18,7 @@
 .aToolTip {
 	background-color: #fff;
 	font-size: 14px;
-	text-align: center;
+	text-align: left;
 	padding: 6px;
 	font-family: 'Lucida Grande', Tahoma, Arial, Verdana, sans-serif;
 	color: #333;
